Add angularJS as skill too

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
   <div class="col-md-12" id="e-409-c">
     <span flex-height="3" id="e-410-c" flex-height-font-size="14px" style="font-size: 14px;">
       
-      <span class="sk-v" id="e-411-c" lines="1">Java</span>
+      <span class="sk-v" id="e-411-c" lines="1">JavaScript</span>
     </span>
   </div>
   <div class="col-md-5 skill-graphic-col fg-primary" id="e-412-c">
@@ -637,6 +637,19 @@
     </span>
   </div>
 </div>
+</div><div class="col-md-12 single-line font-primary" ng-include="src.item" id="e-461-c"><div class="row skill-row" id="e-462-c">
+  <div class="col-md-12" id="e-463-c">
+    <span flex-height="3" id="e-464-c" flex-height-font-size="14px" style="font-size: 14px;">
+
+      <span class="sk-v" id="e-465-c" lines="1">AngularJS</span>
+    </span>
+  </div>
+  <div class="col-md-5 skill-graphic-col fg-primary" id="e-466-c">
+    <span flex-height="3" id="e-467-c" flex-height-font-size="14px" style="font-size: 14px;" lines="1">
+
+
+    </span>
+  </div>
 </div><div class="col-md-12 single-line font-primary" ng-include="src.item" id="e-433-c"><div class="row skill-row" id="e-434-c">
   <div class="col-md-12" id="e-435-c">
     <span flex-height="3" id="e-436-c" flex-height-font-size="14px" style="font-size: 14px;">
