Minor CSS tweaks, added print media CSS; bottom part gets chopped because incoming HTML has style set on an element

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="stylesheets/style.css" media="all">
 </head>
 <body>
-<div id="outer"> <iframe src="https://resume.creddle.io/embed/5g0e3tqops5"
-    width="850" height="1168" frameBorder="0"></iframe></div>
+<iframe src="https://resume.creddle.io/embed/5g0e3tqops5"
+    width="850" height="1168" frameBorder="0"></iframe>
 </body>
 </html>
