CSS tweaks for updated CV

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <iframe src="https://resume.creddle.io/embed/5g0e3tqops5"
-    width="850" height="1168" frameBorder="0"></iframe>
+    width="827" height="1168" scrolling="no" frameBorder="0"></iframe>
 </body>
 </html>
